# global_game_jam_2018

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  game_jam.cbp
lib/libSOIL/: CMakeLists.txt
resource/font/: base.fnt
resource/shader/: crt.frag  crt.info  filled_rectangle.info  lighting.frag  lighting.vert  line.frag  line.vert  map.frag  particle.frag  particle.info  particle.vert  tiles.vert
resources/: release_win_dll.sh
resources/shader/: crt.frag  lighting.frag  lighting.vert  line.frag  line.vert  particle.frag  particle.vert  rectangle.frag  rectangle.vert  text.frag  text.vert  texture.frag  tiles.frag  tiles.info  tiles.vert
source/: audio.cpp  audio.h  camera.cpp  draw.cpp  draw.h  entity.cpp  entity.h  entity_brain_alien.cpp  entity_digger_drone.cpp  entity_explorer_drone.cpp  entity_fighter_drone.cpp  entity_rocket_drone.cpp  globals.cpp  globals.h  light.cpp  light.h  main.cpp  map.cpp  map.h  particle.cpp  player_controller.cpp  player_controller.h  resources.cpp  resources.h  state.cpp  state.h  state_game.cpp  state_splash.cpp  state_title.cpp  ui.cpp  ui.h
source/ext/: HandmadeMath.h  perlin.c  rf_darray.h
src/: audio.cpp  audio.h  camera.cpp  draw.cpp  draw.h  entity.cpp  entity.h  entity_brain_alien.cpp  entity_digger_drone.cpp  entity_explorer_drone.cpp  globals.cpp  globals.h  light.cpp  light.h  main.cpp  map.h  particle.h  projectile.h  resources.cpp  resources.h  state.cpp  state.h  state_game.cpp  state_splash.cpp  state_title.cpp  ui.cpp  ui.h
src/ext/: HandmadeMath.h  dr_wav.h  rf_darray.h  rf_resource_loading.h  stb_vorbis.c
